first version with AI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # HTTP client for API calls
+  http: ^1.2.0
+  
+  # For secure storage of API keys
+  flutter_secure_storage: ^9.2.2
+  
+  # For environment variables and configuration
+  flutter_dotenv: ^5.1.0
+  
+  # For JSON serialization
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
