--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@
 AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com
 AZURE_OPENAI_API_KEY=your-api-key-here
 AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
+
+# Set to true to enable AI features, false to use only original responses
+ENABLE_AI=true
