--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # For internationalization
+  intl: ^0.20.2
   
   # HTTP client for API calls
   http: ^1.2.0
@@ -68,6 +73,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # Internationalization configuration
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
