--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,10 @@ flutter:
     - assets/images/
     - assets/images/backgrounds/
     - assets/images/prophets/
+    - lib/l10n/prophets/
+    - lib/l10n/prophets/chaotic_prophet/
+    - lib/l10n/prophets/mystic_prophet/
+    - lib/l10n/prophets/cynical_prophet/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
