--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # For internationalization
+  intl: ^0.20.2
   
   # HTTP client for API calls
   http: ^1.2.0
@@ -69,11 +74,18 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # Internationalization configuration
+  generate: true
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/images/backgrounds/
     - assets/images/prophets/
+    - lib/l10n/prophets/
+    - lib/l10n/prophets/chaotic_prophet/
+    - lib/l10n/prophets/mystic_prophet/
+    - lib/l10n/prophets/cynical_prophet/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
