--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,19 @@ dependencies:
   # For environment variables and configuration
   flutter_dotenv: ^5.1.0
   
+  # For SQLite database
+  sqflite: ^2.4.0
+  path: ^1.9.0
+  
   # For JSON serialization
   json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # SQLite testing support
+  sqflite_common_ffi: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
