--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   
   # For SQLite database
   sqflite: ^2.4.0
+  sqflite_common_ffi: ^2.3.3
+  sqflite_common_ffi_web: ^0.4.2+3
   path: ^1.9.0
   
   # For JSON serialization
@@ -59,9 +61,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # SQLite testing support
-  sqflite_common_ffi: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
