--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,12 @@ dependencies:
   # For environment variables and configuration
   flutter_dotenv: ^5.1.0
   
+  # For SQLite database
+  sqflite: ^2.4.0
+  sqflite_common_ffi: ^2.3.3
+  sqflite_common_ffi_web: ^0.4.2+3
+  path: ^1.9.0
+  
   # For JSON serialization
   json_annotation: ^4.9.0
 
