--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
     - lib/l10n/prophets/chaotic_prophet/
     - lib/l10n/prophets/mystic_prophet/
     - lib/l10n/prophets/cynical_prophet/
+    - lib/l10n/prophets/roaster_prophet/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
