feat: Implement AdMob integration and question tracking system
- Added AdMobService for managing Google AdMob advertisements, including initialization, loading, and displaying rewarded ads.
- Introduced QuestionAdService to track questions asked and manage ad display with a cooldown system.
- Created QuestionCounterWidget to display question count and ad frequency information.
- Developed UnifiedAdDialog for handling ad display and cooldown scenarios.
- Integrated shared_preferences for persistent storage of question count and cooldown data.
- Updated pubspec.yaml to include google_mobile_ads and shared_preferences dependencies.
- Enhanced macOS plugin registration for shared_preferences and webview_flutter.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,11 +3,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
+    <!-- AdMob permissions -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+    
     <application
         android:label="ProphetAI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:networkSecurityConfig="@xml/network_security_config">
+        
+        <!-- AdMob App ID - Your actual AdMob App ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-2111391175565068~8467955790"/>
+            
         <activity
             android:name=".MainActivity"
             android:exported="true"
