feat: Add Privacy Settings Screen and Consent Management
- Implemented PrivacySettingsScreen for users to manage their privacy consent preferences.
- Integrated PrivacyConsentService to handle consent status and bio feature settings.
- Added functionality to load, update, and reset privacy consent.
- Created PrivacyConsentDialog for onboarding consent acceptance.
- Updated SettingsScreen to navigate to PrivacySettingsScreen and reset privacy consent.
- Enhanced ConversationIntegrationService to check privacy consent before bio data collection.
- Added tests for PrivacyConsentService to ensure proper consent handling and persistence.
- Integrated url_launcher package for opening privacy policy links.
- Updated platform-specific plugin registrations for url_launcher.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   
   # For storing user preferences and counters
   shared_preferences: ^2.2.2
+  
+  # For opening URLs
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
